--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/shree024/NCI2021#readme",
   "dependencies": {
     "big-number": "^2.0.0",
+    "docker": "^1.0.0",
     "dotenv": "^10.0.0",
     "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
